# fuzzyneurals

./: LICENSE  README.md  app.py  organization.txt  pyproject.toml  requirements.txt
.github/workflows/: deploy-lambda.yml
static/css/: requirements.txt  style.css
static/js/: neural-network.js
templates/: base.html  index.html
